--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,14 @@ img {
   top: 0;
   bottom: 0;
   height: 100%;
-  width:50%;
+  width:auto;
   object-fit: contain;
 }
 
-#leftPage {
-  left: 7%;
+#Page {
+  left: 0%;
 }
 
-#rightPage {
-  right: 7%;
-}
 
 button {
   position: absolute;
@@ -45,6 +42,10 @@ button {
 #nextBtn {
   right: 0;
 }
+#nodos {
+  right: 0%;
+  height:50%;
+}
     .node {
       fill: #ccc;
       stroke: #fff;
@@ -59,7 +60,7 @@ button {
     svg {
 	    position:fixed;
 	    z-index:1000;
-	    left: 30%;
+	    left: 50%;
 	}
 
     text {
